# cloneX_django

./: .gitignore  manage.py  pyproject.toml
api/: forms.py  models.py  views.py
api/migrations/: 0001_initial.py  0002_alter_post_options_post_likes_post_user_and_more.py  0003_follower.py
api/templates/: base.html  home.html
api/templates/api/: post_confirm_delete.html  post_form.html  post_list.html  signin.html  signup.html  update_profile.html
cloneX/: asgi.py  settings.py  urls.py  wsgi.py
