[tool.poetry]
name = "clonex-django"
version = "0.1.0"
description = "cloneX API"
authors = ["Kayky Dion <kayky.dion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.2"
factory-boy = "^3.2.1"
django = "^4.2"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
